--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,8 @@
+// root directory
+
 @import './base/settings';
 @import './base/base';
+@import './components/content-container';
+@import './components/box-layout';
+@import './components/button';
+@import './components/header';
