--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,10 +2,16 @@
 $dark-gray: #333333;
 $blue: #1c88bf;
 $dark-blue: #364051;
+$gray: #888888;
 
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+
+// Font Sizing
+$font-size-large: 1.8rem;
+
+// Media Query
 $desktop-breakpoint: 45rem;
