--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,13 @@
 
 @import './base/settings';
 @import './base/base';
+@import './components/button';
 @import './components/content-container';
 @import './components/box-layout';
-@import './components/button';
 @import './components/header';
+@import './components/header';
+@import './components/page-header';
+@import './components/input-group';
+@import './components/inputs';
+@import './components/form';
+
