Styling complete - required, loading gif & mobile application fix

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,6 +3,7 @@ $dark-gray: #333333;
 $blue: #1c88bf;
 $dark-blue: #364051;
 $gray: #888888;
+$off-white: #f7f7f7;
 
 // Spacing
 $s-size: 1.2rem;
@@ -10,8 +11,10 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 
+
 // Font Sizing
 $font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 // Media Query
 $desktop-breakpoint: 45rem;
