--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -5,7 +5,7 @@
 
 // Main Wrapper
 .page-header {
-  background: #f7f7f7;
+  background: $off-white;
   padding: $l-size 0;  // content container will set the left and right padding
   margin-bottom: $l-size;
 }
