--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 
 @import './base/settings';
 @import './base/base';
+@import './components/visibility';
 @import './components/button';
 @import './components/content-container';
 @import './components/box-layout';
@@ -11,4 +12,4 @@
 @import './components/input-group';
 @import './components/inputs';
 @import './components/form';
-
+@import './components/list';
